# myfolks

./: .gitignore  CMakeLists.txt  readme.md
assets/fonts/hello_my_old_friend/: _LICENSING.txt  spr_font_hellomyoldfriend_12x12_by_lotovik.aseprite  spr_font_hellomyoldfriend_12x12_by_lotovik_characterstring.txt
src/: assets_key.h  assets_manager.cpp  assets_manager.h  base_ground.cpp  base_ground.h  base_scene.cpp  base_scene.h  bitmap_font.cpp  bitmap_font.h  box_collider.cpp  box_collider.h  camera.cpp  camera.h  collider.h  collision_result.h  collision_system.cpp  collision_system.h  game.cpp  game.h  game_object.h  log_level.h  logger.cpp  logger.h  main.cpp  main_font.cpp  main_font.h  math_util.cpp  math_util.h  player.cpp  player.h  scene.h  scene_grid.cpp  scene_grid.h  scene_manager.cpp  scene_manager.h  string_utils.h  timer.cpp  timer.h  vec2.h  wall.cpp  (+1 more)
